Fixing image alignment

--- a/public/css/layouts/pureFun.css
+++ b/public/css/layouts/pureFun.css
@@ -1,7 +1,12 @@
 div.pureFun div {
-	width: 200px;
-	height: 200px;
-	margin: 15px 0px 0px 15px;
+
+/*	margin: 15px 0px 0px 15px;*/ 
+	
+	overflow: hidden;
+	position: relative;
+}
+
+div.pureFun div img {
 	border: solid 5px rgb(250, 250, 250);
 	border-radius: 5px;
 	-webkit-border-radius: 5px;
@@ -11,17 +16,10 @@ div.pureFun div {
 	-webkit-box-shadow: 0px 0px 5px #ccc;
 	-moz-box-shadow: 0px 0px 5px #ccc;
 	-o-box-shadow: 0px 0px 5px #ccc;
-	overflow: hidden;
-	position: relative;
-}
-
-div.pureFun div img {
-	width: 200px;
-	height: 200px;
 }
 
 div.pureFun div p {
-	width: 180px;
+	width: 100%;
 	background-color: rgba(255, 255, 255, 0.2);
 	padding: 10px 15px 10px 10px;
 	margin: 0px;
@@ -32,6 +30,5 @@ div.pureFun div p {
 	-webkit-text-shadow: 1px 1px 1px #333;
 	-moz-text-shadow: 1px 1px 1px #333;
 	-o-text-shadow: 1px 1px 1px #333;
-	position: absolute;
-	
+	position: absolute;	
 }
